# keel

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
keel/: __init__.py  cli.py  config.py
keel/core/: __init__.py  errors.py  protocols.py  runtime.py  states.py  types.py
keel/gates/: __init__.py  policy.py  providers.py
keel/llm/: __init__.py  client.py  openai_compatible.py
keel/observability/: __init__.py  decorators.py  investigation.py  observer.py
keel/runbooks/: __init__.py  base.py  executor.py  status.py  wikipedia_citation.py
keel/skills/: __init__.py  base.py  draft.py  investigate.py  locate.py  reliability.py  review.py  verify.py
keel/store/: __init__.py  sqlite_store.py
keel/tools/: __init__.py  base.py  web.py  wikipedia.py  wikitext.py
keel/wikipedia/: __init__.py  models.py  offline_submission.py  target.py
tests/: test_cli.py  test_config.py  test_evidence_models.py  test_observability.py  test_offline_submission.py  test_openai_compatible.py  test_schema_descriptions.py  test_store_migration.py  test_web.py  test_workflow_limits.py  verify_e2e.py
